[package]
name = "packtest_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
mcvm_core = "0.1.1"
mcvm_mods = "0.1.1"
mcvm_shared = "0.10.0"
reqwest = { version = "0.11.22", default_features = false, features = [
	"json",
	"rustls-tls",
] }
tokio = { version = "1.35.0", features = ["macros", "fs", "rt-multi-thread"] }
